<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Theme.MaterialComponents.Light"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginBottom="@dimen/medium"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="50dp"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card" >

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="63dp"
                android:layout_height="63dp"
                android:layout_margin="@dimen/medium"
                android:scaleType="centerCrop"
                android:padding="2.2dp"
                android:background="@drawable/border_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/avatar_user" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:maxLines="1"
                android:textColor="@color/title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_avatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.16000003"
                tools:text="@string/dummy_username" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:maxLines="1"
                android:textColor="@color/desc"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_avatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.55"
                tools:text="@string/dummy_type" />

            <TextView
                android:id="@+id/tv_html_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:maxLines="1"
                android:textColor="@color/desc"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_avatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.83"
                tools:text="@string/dummy_html_url" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
